[workspace]

members = [
    "challenges",
    "encoding",
    "xor",
    "cryptanalysis",
    "cipher",
    "prng",
    "sha1",
    "md4",
    # reason for reimplementation rather than using existing crate: 1. practice, 2. don't want to rely on
    # self-modified `sha1` module
    "hmac",
    "dh"
]
