[package]
name = "challenges"
version = "0.1.0"
authors = ["Alex Xiong <alex.xiong.tech@gmail.com>"]
edition = "2018"

[lib]
name = "challenges"
path = "src/lib.rs"

[dependencies]
rand = "0.7"
openssl-sys = "0.9"
openssl = "0.10"
serde_json = "1.0"
anyhow = "1.0"
crypto-mac = "0.7"
digest = "0.8"
rocket = "0.4.2"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }

[dependencies.xor]
path = "../xor"

[dependencies.encoding]
path = "../encoding"

[dependencies.cryptanalysis]
path = "../cryptanalysis"

[dependencies.cipher]
path = "../cipher"

[dependencies.prng]
path = "../prng"

[dependencies.sha1]
path = "../sha1"

[dependencies.md4]
path = "../md4"

[dependencies.hmac]
path = "../hmac"
