[package]
name = "challenges"
version = "0.1.0"
authors = ["Alex Xiong <alex.xiong.tech@gmail.com>"]
edition = "2018"

[dependencies]
xor = { path = "../xor" }
encoding = { path = "../encoding" }
cryptanalysis = { path = "../cryptanalysis" }
cipher = { path = "../cipher" }
prng = { path = "../prng" }
sha1 = { path = "../sha1" }
md4 = { path = "../md4" }
hmac = { path = "../hmac" }
dh = { path = "../dh" }
rand = "0.5"
openssl-sys = "0.9"
openssl = "0.10"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crypto-mac = "0.7"
digest = "0.8"
rocket = "0.4.2"
rocket_contrib = "0.4.2"
hyper = "0.14"
tokio = { version = "0.2", features = ["full"] }
num = { version = "0.2.1", features = ["rand"] }
sha2 = "0.8.1"
bytes = "0.5"
regex = "1"
lazy_static = "1.4.0"
ring = "^0.13"
flate2 = "1.0"
