[package]
name = "challenges"
version = "0.1.0"
authors = ["Alex Xiong <alex.xiong.tech@gmail.com>"]
edition = "2018"

[dependencies]
xor = { path = "../xor" }
encoding = { path = "../encoding" }
cryptanalysis = { path = "../cryptanalysis" }
cipher = { path = "../cipher" }
prng = { path = "../prng" }
sha1 = { path = "../sha1" }
md4 = { path = "../md4" }
hmac = { path = "../hmac" }
dh = { path = "../dh" }
rand = "^0.8"
openssl-sys = "^0.9"
openssl = "^0.10"
serde_json = "1.0"
serde_urlencoded = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
crypto-mac = "0.7"
digest = "0.8"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
hyper = { version = "^0.14.25", features = ["client", "http2", "tcp"] }
tokio = { version = "^1.27", features = ["full"] }
num = { version = "^0.4", features = ["rand"] }
sha2 = "0.8.1"
bytes = "^1.4"
regex = "1"
lazy_static = "1.4.0"
ring = "0.16.20"
flate2 = "1.0"
