[package]
name = "cipher"
version = "0.1.0"
authors = ["AlexXiong97 <alex.xiong.tech@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-sys = "0.9"
openssl = "0.10"


[dependencies.xor]
path = '../xor'
